Fix for articles being too narrow.  Removed previous article width fix.

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -269,7 +269,7 @@ article h2, h3, h4 {
 
 article p {
   text-align: justify;
-  max-width: 85%;
+  // max-width: 85%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -319,7 +319,7 @@ p code {
   background-color: $code-background;
   overflow-wrap: break-word;
   // text-align: left;
-  max-width: 90%;
+  // max-width: 90%;
   // overflow-x: auto;
   // word-break: inherit;
   // word-wrap: inherit;
